adding analysis and db

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ body {
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
+@media screen and (max-height: 600px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
@@ -93,5 +93,12 @@ input[type=submit]:hover {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
+}
+
+textarea {
+  box-sizing: border-box;
+  resize: none;
+              overflow: hidden;
+
 }
 </style>
