--- a/css/style.css
+++ b/css/style.css
@@ -26,14 +26,14 @@ body {
 }
 
 /* The navigation menu links */
-.sidenav a {
+/*.sidenav a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
   color: #818181;
   display: block;
   transition: 0.3s;
-}
+}*/
 
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
@@ -48,7 +48,36 @@ body {
   font-size: 36px;
   margin-left: 50px;
 }
+.sidenav a, .dropdown-btn {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 20px;
+  color: #818181;
+  display: block;
+  border: none;
+  background: none;
+  /*width:100%;*/
+  text-align: left;
+  cursor: pointer;
+  outline: none;
+}
 
+.active {
+  background-color: black;
+  color: white;
+}
+
+.dropdown-container {
+  display: none;
+  background-color: #262626;
+  padding-left: 6px;
+}
+
+/* Optional: Style the caret down icon */
+.fa-caret-down {
+  float: right;
+  padding-right: 6px;
+}
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
 #main {
   transition: margin-left .5s;
@@ -57,8 +86,8 @@ body {
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 600px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+  .sidenav {padding-top: 20px;}
+  .sidenav a {font-size: 20px;}
 }
 
 /* Style inputs with type="text", select elements and textareas */
